moved my h3 "resources" and p "Helpful links..." into the same container as the according to fix the alignment and apply the same padding

--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,7 @@ svg {
 
 /* GRID */
 .row {
-    --gridgap: 2em;
+    --gridgap: 1em;
 }
 
 .row2 {
